--- a/DominoGame.Wpf/App.xaml
+++ b/DominoGame.Wpf/App.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DominoGame.Wpf"
-             >
+             xmlns:conv="clr-namespace:DominoGame.Wpf.Converters"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <conv:DominoEnabledConverter x:Key="DominoEnabledConverter"/>
     </Application.Resources>
 </Application>
