--- a/DominoGame.Wpf/MainWindow.xaml
+++ b/DominoGame.Wpf/MainWindow.xaml
@@ -2,43 +2,58 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:DominoGame.Wpf"
-        Title="Domino Game"
-        Width="800"
-        Height="450">
+        Title="Domino Game" Width="800" Height="450">
 
-    <ItemsControl ItemsSource="{Binding Dominoes}">
-        <ItemsControl.ItemsPanel>
-            <ItemsPanelTemplate>
-                <StackPanel Orientation="Horizontal"/>
-            </ItemsPanelTemplate>
-        </ItemsControl.ItemsPanel>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-        <ItemsControl.ItemTemplate>
-            <DataTemplate>
-                <Border BorderBrush="Black"
-                        BorderThickness="2"
-                        Width="60"
-                        Height="30"
-                        Margin="5">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
+        <!-- Board -->
+        <ItemsControl Grid.Row="0" ItemsSource="{Binding Board}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Border BorderBrush="Black" BorderThickness="1" Padding="5" Margin="2">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding Left}"/>
+                            <TextBlock Text="|"/>
+                            <TextBlock Text="{Binding Right}"/>
+                        </StackPanel>
+                    </Border>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
 
-                        <TextBlock Text="{Binding Left}"
-                                   FontSize="16"
-                                   HorizontalAlignment="Center"
-                                   VerticalAlignment="Center"/>
+        <!-- Hand -->
+        <ItemsControl Grid.Row="1" ItemsSource="{Binding Hand}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Button Command="{Binding DataContext.PlayDominoCommand, RelativeSource={RelativeSource AncestorType=Window}}"
+                        CommandParameter="{Binding}"
+                        IsEnabled="{Binding DataContext.PlayableTiles, RelativeSource={RelativeSource AncestorType=Window}, 
+                                    Converter={StaticResource DominoEnabledConverter}, ConverterParameter={Binding}}">
 
-                        <TextBlock Text="{Binding Right}"
-                                   Grid.Column="1"
-                                   FontSize="16"
-                                   HorizontalAlignment="Center"
-                                   VerticalAlignment="Center"/>
-                    </Grid>
-                </Border>
-            </DataTemplate>
-        </ItemsControl.ItemTemplate>
-    </ItemsControl>
+                        <Border BorderThickness="2" BorderBrush="Black" Padding="6">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding Left}"/>
+                                <TextBlock Text="|"/>
+                                <TextBlock Text="{Binding Right}"/>
+                            </StackPanel>
+                        </Border>
+                    </Button>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+    </Grid>
 </Window>
