--- a/DominoGame.Wpf/App.xaml
+++ b/DominoGame.Wpf/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DominoGame.Wpf"
-             xmlns:conv="clr-namespace:DominoGame.Wpf.Converters"
-             StartupUri="MainWindow.xaml">
+             xmlns:conv="clr-namespace:DominoGame.Wpf.Converters">
     <Application.Resources>
         <conv:DominoEnabledConverter x:Key="DominoEnabledConverter"/>
     </Application.Resources>
