--- a/DominoGame.Wpf/DominoTileControl.xaml
+++ b/DominoGame.Wpf/DominoTileControl.xaml
@@ -1,16 +1,16 @@
-<UserControl x:Class="DominoGame.Wpf.Controls.DominoTileControl"
+﻿<UserControl x:Class="DominoGame.Wpf.Controls.DominoTileControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Width="70" Height="35">
+             Width="35" Height="70">
 
     <Border BorderThickness="2" BorderBrush="Black" Background="White" CornerRadius="4">
         <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
 
-            <!-- LEFT -->
+            <!-- TOP -->
             <ItemsControl ItemsSource="{Binding LeftPips}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -24,8 +24,8 @@
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
 
-            <!-- RIGHT -->
-            <ItemsControl Grid.Column="1" ItemsSource="{Binding RightPips}">
+            <!-- BOTTOM -->
+            <ItemsControl Grid.Row="1" ItemsSource="{Binding RightPips}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <UniformGrid Rows="3" Columns="2"/>
