--- a/DominoGame.Wpf/MainWindow.xaml
+++ b/DominoGame.Wpf/MainWindow.xaml
@@ -1,5 +1,4 @@
-﻿
-<Window x:Class="DominoGame.Wpf.MainWindow"
+﻿<Window x:Class="DominoGame.Wpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:DominoGame.Wpf"
@@ -9,6 +8,99 @@
         Height="640"
         Background="#0E2E2F">
 
+    <Window.Resources>
+        <DataTemplate x:Key="HandTileTemplateHorizontal">
+            <Grid x:Name="TileRoot" Margin="3">
+                <Grid x:Name="FaceUpRoot">
+                    <ctrl:DominoTileControl/>
+                </Grid>
+                <Border x:Name="FaceDownRoot"
+                        Width="35"
+                        Height="70"
+                        BorderThickness="2"
+                        BorderBrush="Black"
+                        Background="#F1F7F6"
+                        CornerRadius="4"/>
+            </Grid>
+            <DataTemplate.Triggers>
+                <DataTrigger Binding="{Binding DataContext.IsCurrent, RelativeSource={RelativeSource AncestorType=ItemsControl}}" Value="True">
+                    <Setter TargetName="FaceUpRoot" Property="Visibility" Value="Visible"/>
+                    <Setter TargetName="FaceDownRoot" Property="Visibility" Value="Collapsed"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding DataContext.IsCurrent, RelativeSource={RelativeSource AncestorType=ItemsControl}}" Value="False">
+                    <Setter TargetName="FaceUpRoot" Property="Visibility" Value="Collapsed"/>
+                    <Setter TargetName="FaceDownRoot" Property="Visibility" Value="Visible"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding IsPlayable}" Value="False">
+                    <Setter TargetName="TileRoot" Property="Opacity" Value="0.5"/>
+                </DataTrigger>
+            </DataTemplate.Triggers>
+        </DataTemplate>
+
+        <DataTemplate x:Key="HandTileTemplateVertical">
+            <Grid x:Name="TileRoot" Margin="3">
+                <Grid.LayoutTransform>
+                    <RotateTransform Angle="90"/>
+                </Grid.LayoutTransform>
+                <Grid x:Name="FaceUpRoot">
+                    <ctrl:DominoTileControl/>
+                </Grid>
+                <Border x:Name="FaceDownRoot"
+                        Width="35"
+                        Height="70"
+                        BorderThickness="2"
+                        BorderBrush="Black"
+                        Background="#F1F7F6"
+                        CornerRadius="4"/>
+            </Grid>
+            <DataTemplate.Triggers>
+                <DataTrigger Binding="{Binding DataContext.IsCurrent, RelativeSource={RelativeSource AncestorType=ItemsControl}}" Value="True">
+                    <Setter TargetName="FaceUpRoot" Property="Visibility" Value="Visible"/>
+                    <Setter TargetName="FaceDownRoot" Property="Visibility" Value="Collapsed"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding DataContext.IsCurrent, RelativeSource={RelativeSource AncestorType=ItemsControl}}" Value="False">
+                    <Setter TargetName="FaceUpRoot" Property="Visibility" Value="Collapsed"/>
+                    <Setter TargetName="FaceDownRoot" Property="Visibility" Value="Visible"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding IsPlayable}" Value="False">
+                    <Setter TargetName="TileRoot" Property="Opacity" Value="0.5"/>
+                </DataTrigger>
+            </DataTemplate.Triggers>
+        </DataTemplate>
+
+        <DataTemplate x:Key="PlayerHandHorizontalTemplate">
+            <ItemsControl ItemsSource="{Binding Hand}" ItemTemplate="{StaticResource HandTileTemplateHorizontal}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Orientation="Horizontal"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemContainerStyle>
+                    <Style TargetType="ContentPresenter">
+                        <EventSetter Event="PreviewMouseLeftButtonDown" Handler="HandTile_PreviewMouseLeftButtonDown"/>
+                        <EventSetter Event="PreviewMouseMove" Handler="HandTile_PreviewMouseMove"/>
+                    </Style>
+                </ItemsControl.ItemContainerStyle>
+            </ItemsControl>
+        </DataTemplate>
+
+        <DataTemplate x:Key="PlayerHandVerticalTemplate">
+            <ItemsControl ItemsSource="{Binding Hand}" ItemTemplate="{StaticResource HandTileTemplateVertical}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Orientation="Vertical"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemContainerStyle>
+                    <Style TargetType="ContentPresenter">
+                        <EventSetter Event="PreviewMouseLeftButtonDown" Handler="HandTile_PreviewMouseLeftButtonDown"/>
+                        <EventSetter Event="PreviewMouseMove" Handler="HandTile_PreviewMouseMove"/>
+                    </Style>
+                </ItemsControl.ItemContainerStyle>
+            </ItemsControl>
+        </DataTemplate>
+    </Window.Resources>
+
     <Grid Margin="20">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -17,7 +109,6 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Border Grid.Row="0"
@@ -60,95 +151,120 @@
                 Background="#184B4E"
                 CornerRadius="14"
                 Padding="16">
-            <StackPanel>
-                <TextBlock Text="Board"
-                           Foreground="#DFF3F1"
-                           FontWeight="Bold"
-                           Margin="0,0,0,10"/>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
 
-                <ItemsControl ItemsSource="{Binding BoardDominoes}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <StackPanel Orientation="Horizontal"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <ctrl:DominoTileControl/>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
+                <ContentControl Grid.Row="0"
+                                Grid.Column="1"
+                                Content="{Binding TopPlayer}"
+                                ContentTemplate="{StaticResource PlayerHandHorizontalTemplate}"/>
 
-            </StackPanel>
-        </Border>
+                <ContentControl Grid.Row="2"
+                                Grid.Column="1"
+                                Content="{Binding BottomPlayer}"
+                                ContentTemplate="{StaticResource PlayerHandHorizontalTemplate}"/>
 
-        <Border Grid.Row="2"
-                Grid.Column="0"
-                Background="#123B3D"
-                CornerRadius="12"
-                Padding="12">
-            <StackPanel>
-                <TextBlock Text="Your Hand"
-                           Foreground="#DFF3F1"
-                           FontWeight="Bold"
-                           Margin="0,0,0,8"/>
+                <ContentControl Grid.Row="1"
+                                Grid.Column="0"
+                                Content="{Binding LeftPlayer}"
+                                ContentTemplate="{StaticResource PlayerHandVerticalTemplate}"/>
 
-                <ItemsControl ItemsSource="{Binding PlayerHand}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <WrapPanel Orientation="Horizontal"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
+                <ContentControl Grid.Row="1"
+                                Grid.Column="2"
+                                Content="{Binding RightPlayer}"
+                                ContentTemplate="{StaticResource PlayerHandVerticalTemplate}"/>
 
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Border CornerRadius="8"
-                                    BorderThickness="2"
-                                    Margin="4"
-                                    Padding="2">
-                                <Border.Style>
-                                    <Style TargetType="Border">
-                                        <Setter Property="BorderBrush" Value="Transparent"/>
-                                        <Setter Property="Background" Value="Transparent"/>
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding IsSelected}" Value="True">
-                                                <Setter Property="BorderBrush" Value="#F2D06B"/>
-                                                <Setter Property="Background" Value="#2E5B55"/>
-                                            </DataTrigger>
-                                            <DataTrigger Binding="{Binding IsPlayable}" Value="False">
-                                                <Setter Property="Opacity" Value="0.45"/>
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </Border.Style>
+                <Border Grid.Row="1"
+                        Grid.Column="1"
+                        Background="#1B4F52"
+                        CornerRadius="12"
+                        Padding="12"
+                        Margin="10">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
 
-                                <Button Command="{Binding DataContext.SelectDominoCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}"
-                                        CommandParameter="{Binding}"
-                                        Padding="0"
-                                        BorderThickness="0"
-                                        Background="Transparent">
-                                    <ctrl:DominoTileControl/>
-                                </Button>
+                        <TextBlock Text="Board"
+                                   Foreground="#DFF3F1"
+                                   FontWeight="Bold"
+                                   Margin="0,0,0,10"/>
+
+                        <Grid Grid.Row="1"
+                              HorizontalAlignment="Center"
+                              VerticalAlignment="Center">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+
+                            <Border x:Name="DropLeftZone"
+                                    Width="60"
+                                    Margin="0,0,4,0"
+                                    Background="#123B3D"
+                                    CornerRadius="8"
+                                    Padding="4"
+                                    AllowDrop="True"
+                                    DragOver="DropZone_DragOver"
+                                    Drop="DropLeftZone_Drop">
+                                <TextBlock Text="Left"
+                                           Foreground="#CDE5E3"
+                                           FontSize="12"
+                                           HorizontalAlignment="Center"
+                                           VerticalAlignment="Center"/>
                             </Border>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
 
-                <StackPanel Orientation="Horizontal" Margin="0,12,0,0">
-                    <Button Content="Place Left"
-                            Command="{Binding PlaceLeftCommand}"
-                            Margin="0,0,8,0"
-                            Padding="12,6"/>
-                    <Button Content="Place Right"
-                            Command="{Binding PlaceRightCommand}"
-                            Margin="0,0,8,0"
-                            Padding="12,6"/>
-                    <Button Content="Pass"
-                            Command="{Binding PassCommand}"
-                            Padding="12,6"/>
-                </StackPanel>
-            </StackPanel>
+                            <ItemsControl Grid.Column="1"
+                                          ItemsSource="{Binding BoardDominoes}"
+                                          Width="520"
+                                          Height="300"
+                                          HorizontalAlignment="Center"
+                                          VerticalAlignment="Center">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <ctrl:OShapePanel Padding="8"/>
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                                <ItemsControl.ItemTemplate>
+                                    <DataTemplate>
+                                        <ctrl:DominoTileControl/>
+                                    </DataTemplate>
+                                </ItemsControl.ItemTemplate>
+                            </ItemsControl>
+
+                            <Border x:Name="DropRightZone"
+                                    Grid.Column="2"
+                                    Width="60"
+                                    Margin="4,0,0,0"
+                                    Background="#123B3D"
+                                    CornerRadius="8"
+                                    Padding="4"
+                                    AllowDrop="True"
+                                    DragOver="DropZone_DragOver"
+                                    Drop="DropRightZone_Drop">
+                                <TextBlock Text="Right"
+                                           Foreground="#CDE5E3"
+                                           FontSize="12"
+                                           HorizontalAlignment="Center"
+                                           VerticalAlignment="Center"/>
+                            </Border>
+                        </Grid>
+                    </Grid>
+                </Border>
+            </Grid>
         </Border>
+
         <Border Grid.Row="1"
                 Grid.Column="1"
                 Margin="16,18,0,18"
@@ -170,8 +286,19 @@
                                     <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
 
-                                <TextBlock Text="{Binding Name}"
-                                           Foreground="#F1F7F6"/>
+                                <TextBlock Text="{Binding Name}">
+                                    <TextBlock.Style>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Foreground" Value="#F1F7F6"/>
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding IsCurrent}" Value="True">
+                                                    <Setter Property="Foreground" Value="#F2D06B"/>
+                                                    <Setter Property="FontWeight" Value="Bold"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
                                 <TextBlock Grid.Column="1"
                                            Text="{Binding Score}"
                                            Foreground="#F2D06B"
