--- a/DominoGame.Wpf/App.xaml
+++ b/DominoGame.Wpf/App.xaml
@@ -3,10 +3,7 @@
 <Application x:Class="DominoGame.Wpf.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:DominoGame.Wpf"
-             xmlns:conv="clr-namespace:DominoGame.Wpf.Converters">
+             xmlns:local="clr-namespace:DominoGame.Wpf">
     <Application.Resources>
-        <!-- DominoEnabledConverter: x:Key sebagai resource key untuk dipakai pada binding. -->
-        <conv:DominoEnabledConverter x:Key="DominoEnabledConverter"/>
     </Application.Resources>
 </Application>
