--- a/DominoGame.Wpf/MainWindow.xaml
+++ b/DominoGame.Wpf/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:DominoGame.Wpf.Views"
-        Title="Domino Game"
+        Title="Domino Block Game"
         WindowState="Maximized"
         Background="#0E2E2F">
     <views:GameView x:Name="GameHost"/>
